--- a/index.html
+++ b/index.html
@@ -1009,6 +1009,9 @@ fee or have an annual parking pass (window sticker). This includes chaperone veh
 
 <p>NO REFUNDS WILL BE ISSUED FOR PARKING.
 <a href="https://www.stonemountainpark.com/tickets-specials/parking/">Purchase parking here.</a></p>
+
+<p><strong>Stone Mountain Park operates rain or shine. There are no refunds or rain checks on
+prepaid admission, field trip programs, meals or parking vouchers.</p>strong></p>
 <td>
 						<p>
 							<b>
